sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:6: error: reassignment to val
  	swap = false;
             ^